# test

backend/: README.md  docker-compose.yaml
backend/ai_recommendation_service/: Dockerfile  pyproject.toml  requirements.txt
backend/ai_recommendation_service/app/: data_processing.py  main.py  model_config.py  models.py
backend/app/: crud.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: items.py  utils.py
backend/app/core/: config.py
backend/market_data_service/: backend_pre_start.py  prestart.sh  pyproject.toml  requirements.txt
backend/market_data_service/app/: main.py  models.py
backend/portfolio_service/: Dockerfile  backend_pre_start.py  pyproject.toml
backend/portfolio_service/app/: main.py  models.py
backend/transaction_service/: backend_pre_start.py  requirements.txt
backend/transaction_service/app/: main.py  models.py
backend/user_service/: backend_pre_start.py  pyproject.toml
backend/user_service/app/: main.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  routeTree.gen.ts  theme.tsx
frontend/src/components/Asset/: AddAsset.tsx  DeleteAsset.tsx  EditAsset.tsx
frontend/src/components/Common/: AssetActionsMenu.tsx  Navbar.tsx  SidebarItems.tsx  UserMenu.tsx
frontend/src/components/Home/: Home.tsx
frontend/src/components/UserSettings/: Appearance.tsx  ChangePassword.tsx  DeleteConfirmation.tsx  UserInformation.tsx
frontend/src/components/ui/: radio.tsx
frontend/src/routes/: _layout.tsx  home.tsx  index.tsx  login.tsx  signup.tsx
frontend/src/utils/: format.ts
(+13 files in other folders)
